Updating the Automation Challenge with API RestSharp part

--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -39,3 +39,6 @@ APP_BASEURL = http://automationpractice.com
 
 # My Account URL Application
 APP_MY_ACCOUNT = ?controller=my-account
+
+# API URL for Get all countries
+BASE_API_URL = https://restcountries.eu/rest/v2/
