--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.13.0" targetFramework="net48" />
+  <package id="Enumeration" version="2.0.0" targetFramework="net48" />
   <package id="FileHelpers" version="3.4.2" targetFramework="net48" />
   <package id="FluentAssertions" version="3.5.0" targetFramework="net45" />
   <package id="Gauge.CSharp.Lib" version="0.7.2" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.UnitTesting" version="11.0.50727.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net48" />
+  <package id="NUnit" version="3.13.1" targetFramework="net48" />
   <package id="RandomNameGeneratorLibrary" version="1.2.2.0" targetFramework="net48" />
+  <package id="RestSharp" version="106.11.7" targetFramework="net48" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net48" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net48" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net48" />
